<resources>
    <string name="app_name">Aplikasi Dicoding Event</string>
    <string name="title">Judul</string>
    <string name="title_home">Home</string>
    <string name="owner_name">Penyelenggara: </string>
    <string name="quota_left">Sisa Kuota: </string>
    <string name="informasi">Informasi: </string>
    <string name="date">Tanggal:</string>
    <string name="detail_event">Detail Event</string>
    <string name="favorite">Favorite</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="upcoming">Upcoming</string>
    <string name="finished">Finished</string>
    <string name="label_time">Waktu:</string>
    <string name="btn_open_link">Buka Link Event</string>
    <string name="remaining_quota">%d</string>
    <string name="label_organizer">Penyelenggara:</string>
    <string name="label_date">Tanggal:</string>
    <string name="label_quota">Sisa Kuota:</string>
    <string name="label_description">Deskripsi:</string>
    <string name="btn_register">Daftar Event</string>
    <string name="rundown_acara">Rundown acara:</string>
    <string name="faq">FAQ:</string>
    <string name="kuota_tersisa">Kuota tersisa:</string>
    <string name="register">Register</string>
    <string name="event_image">Event Image</string>
    <string name="mediacover">MediaCover</string>
    <string name="no_favorites">No favorite events yet</string>
    <string name="setting">Setting</string>
</resources>